<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        android:iconTint="@color/black"/>
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24" />
    <item
        android:id="@+id/play"
        android:enabled="true"
        android:title="@string/play"
        android:icon="@drawable/ic_baseline_play_circle_filled_24" />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:title="Profile"
        android:icon="@drawable/ic_baseline_account_circle_24" />
</menu>