<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MovieDetailsFragment"
    android:background="@color/light_gray">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/toolbar_title_placeholder"
        android:background="@color/white"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/imdb_section"
        android:paddingTop="@dimen/multiplier_8"
        android:paddingBottom="@dimen/multiplier_10"
        android:layout_marginTop="@dimen/multiplier_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsToolbar">

        <com.example.imdb_project.views.SectionTitleView
            android:id="@+id/movieDetailsTitle"
            android:layout_width="409dp"
            android:layout_height="33dp"
            android:paddingStart="@dimen/multiplier_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/movieOriginalTitle"
            android:layout_marginTop="@dimen/multiplier_4"
            android:layout_marginStart="@dimen/multiplier_17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/multiplier_4sp"
            android:text="@string/original_title"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/shortDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/short_description"
            android:textSize="@dimen/multiplier_5sp"
            android:layout_marginStart="@dimen/multiplier_17"
            android:layout_marginTop="@dimen/multiplier_2"
            app:layout_constraintTop_toBottomOf="@id/movieOriginalTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/moviePreview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/multiplier_120"
            android:layout_marginTop="@dimen/multiplier_10"
            app:layout_constraintTop_toBottomOf="@id/shortDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/movie_preview" />

        <ImageView
            android:layout_width="@dimen/multiplier_25"
            android:layout_height="@dimen/multiplier_25"
            android:contentDescription="@string/play_button"
            android:src="@drawable/ic_outline_play_circle_outline_24"
            app:layout_constraintBottom_toBottomOf="@+id/moviePreview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/moviePreview"
            app:layout_constraintTop_toTopOf="@+id/moviePreview"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/movieDetailsThumbnail"
            android:layout_marginTop="@dimen/multiplier_10"
            android:layout_marginStart="@dimen/multiplier_10"
            android:layout_width="@dimen/multiplier_50"
            android:layout_height="@dimen/multiplier_70"
            app:layout_constraintTop_toBottomOf="@id/moviePreview"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/movie_thumbnail" />

        <TextView
            android:id="@+id/movieGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/multiplier_8sp"
            app:layout_constraintTop_toTopOf="@id/movieDetailsThumbnail"
            app:layout_constraintStart_toEndOf="@id/movieDetailsThumbnail"
            android:paddingStart="@dimen/multiplier_8"
            android:paddingEnd="@dimen/multiplier_8"
            android:paddingBottom="@dimen/multiplier_4"
            android:paddingTop="@dimen/multiplier_4"
            android:layout_marginStart="@dimen/multiplier_15"
            android:background="@drawable/genre_rounded_outlined"
            android:text="@string/genre" />

        <TextView
            android:id="@+id/movieDescription"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/movie_description_placeholder"
            android:textSize="@dimen/multiplier_8sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/movieGenre"
            app:layout_constraintBottom_toBottomOf="@id/movieDetailsThumbnail"
            android:maxLines="4"/>

        <ImageView
            android:id="@+id/starImage"
            android:layout_width="@dimen/multiplier_10"
            android:layout_height="@dimen/multiplier_10"
            android:src="@drawable/ic_baseline_star_24"
            android:layout_marginStart="@dimen/multiplier_10"
            app:layout_constraintBottom_toBottomOf="@id/movieGenre"
            app:layout_constraintTop_toTopOf="@id/movieGenre"
            app:layout_constraintStart_toEndOf="@id/movieGenre"
            android:contentDescription="@string/number_of_stars"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/multiplier_8sp"
            android:text="@string/movie_rating"
            android:layout_marginStart="@dimen/multiplier_4"
            app:layout_constraintTop_toTopOf="@id/movieGenre"
            app:layout_constraintBottom_toBottomOf="@id/movieGenre"
            app:layout_constraintStart_toEndOf="@id/starImage"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/multiplier_10"
            android:layout_marginBottom="@dimen/multiplier_10"
            android:padding="@dimen/multiplier_10"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsThumbnail"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/seconda_round_bold"
                android:textSize="@dimen/multiplier_10sp"
                android:text="@string/episodes_guide" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/multiplier_8sp"
                android:text="@string/number_episodes" />


        </LinearLayout>
        

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>