<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/multiplier_60"
    android:layout_marginEnd="@dimen/multiplier_5"
    android:layout_marginStart="@dimen/multiplier_5"
    android:layout_marginBottom="@dimen/multiplier_10"
    android:elevation="10dp"
    android:background="@drawable/shadow"
    android:layout_height="230dp">

    <ImageView
        android:id="@+id/horizontalMovieThumbnail"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/movie_thumbnail" />

    <TextView
        android:id="@+id/movieRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/multiplier_8"
        android:layout_marginTop="@dimen/multiplier_4"
        android:textSize="@dimen/multiplier_5sp"
        android:textColor="@color/text_gray"
        android:text="@string/movie_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalMovieThumbnail" >
    </TextView>

    <TextView
        android:id="@+id/horizontalMovieTitle"
        android:layout_width="@dimen/multiplier_50"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/multiplier_5"
        android:layout_marginTop="@dimen/multiplier_4"
        android:textSize="@dimen/multiplier_5sp"
        android:textColor="@color/black"
        android:text="@string/movie_title_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieRating">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>